Use Math.clamp instead of Math.min/Math.max chains (S6885) (#76)
Java 21 provides Math.clamp(value, min, max) natively. Replace the
Math.max(min, Math.min(max, value)) idiom in maze service code with the
clearer single-call form to address SonarQube rule java:S6885.